<resources>
    <string name="app_name">WhatsSyntax</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="chats">Chats</string>
    <string name="contactpicture">contactPicture</string>
    <string name="save">save</string>
    <string name="name_contact">name contact</string>
    <string name="_49_1234_5678923">+49 1234 5678923</string>
    <string name="delete">Delete</string>
    <string name="number_Exam">012345664545</string>
    <string name="messages">Messages</string>
    <string name="type_here">type here...</string>
    <string name="send">send</string>
    <string name="space"> …</string>
    <string name="done">Done</string>
    <string name="enter_your_name_here">Enter your name here!</string>
    <string name="enter_your_number_here">enter your number here!</string>
</resources>