<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.ui.CallsFragment">

    <Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/tv_contactImg_cardView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:cardCornerRadius="100dp"
                app:cardElevation="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.050000012">


                <ImageView
                    android:id="@+id/iv_contactImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pp_02"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.03" />


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/tv_contactNumber_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contactImg_cardView"
                app:layout_constraintVertical_bias="0.17">


                <EditText
                    android:id="@+id/tv_contactName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:padding="20dp"
                    android:textStyle="bold"
                    android:hint="@string/enter_your_name_here"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_contactImg"
                    app:layout_constraintVertical_bias="0.23" />


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/tv_contactName_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contactNumber_cardView"
                app:layout_constraintVertical_bias="0.080">


                <EditText
                    android:id="@+id/tv_contactNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="number:"
                    android:textAlignment="center"
                    android:hint="@string/enter_your_number_here"
                    android:padding="20dp"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_contactName"
                    app:layout_constraintVertical_bias="0.060" />

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/bv_save"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                android:elevation="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contactName_cardView"
                app:layout_constraintVertical_bias="0.70" />

            <Button
                android:id="@+id/bv_delete"
                android:layout_width="148dp"
                android:layout_height="45dp"
                android:alpha="0.7"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bv_save"
                app:layout_constraintVertical_bias="1.0" />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>